--- a/src/components/aid/aid copy.scss
+++ b/src/components/aid/aid copy.scss
@@ -2,11 +2,12 @@
 
 .aid-wrapper {
     @include backgroundIce;
+    height: 1500px;
     margin: 20px 0px;
-    padding: 10px 30px 30px 30px;
+    padding: 10px 30px 140px 30px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 21% minmax(auto, 1000px) auto;
     box-shadow: 7px 15px 20px -6px black,
         0px 0px 5px rgba(145, 144, 144, 0.493);
     transform: translateY(200px);
@@ -43,7 +44,6 @@
     width: 300px;
 
     &__wrapper {
-        //border: 1px red solid;
         @include flexCenter;
         grid-column: 1/2;
         grid-row: 1/2;
@@ -67,13 +67,14 @@
 
 .aid-description {
     &__wrapper {
-        //border: 1px red solid;
+        flex-wrap: wrap;
         grid-column: 1/2;
         grid-row: 2/3;
+        max-width: 600px;
     }
 
     &__title {
-        font-size: 2rem;
+        font-size: $text-size-h1;
         margin: 20px 0px;
     }
 
@@ -82,17 +83,13 @@
 
         &:nth-child(2) {
             font-size: $text-size-h2;
-            margin: 30px 0px;
             font-weight: 500;
 
         }
 
-        &:nth-child(3) {
-            margin: 50px 0px;
-        }
-
         &:nth-child(4) {
-            margin: 50px 0px;
+            margin-top: 60px;
+
         }
 
         & strong {
@@ -104,24 +101,26 @@
 
 .aid-instruction {
     &__wrapper {
+        grid-column: 1/2;
+        grid-row: 3/4;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        //border: 1px red solid;
-        grid-column: 1/2;
-        grid-row: 3/4;
         position: relative;
+        height: 110%;
 
         &::before {
             content: "";
+            height: 110%;
+            max-height: 900px;
+            width: 110%;
+            max-width: 700px;
             position: absolute;
             left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            width: 105%;
-            max-width: 720px;
-            height: 102%;
-            background-color: pink;
+            bottom: -10%;
+            transform: translate(-50%, 0%);
+            background-color: $color-white;
+            padding: 10px;
             border-radius: 5px;
             box-shadow: 6px 15px 30px -6px black;
             z-index: -10;
@@ -129,7 +128,9 @@
     }
 
     &__text {
-        //border: 1px blue solid;
+        @include flexCenter;
+        height: 150px;
+        max-height: 150px;
         max-width: 600px;
 
     }
@@ -138,26 +139,23 @@
 
     &__step-descriptions-item {
         list-style-type: none;
-        margin: 15px;
+
     }
 
-    &__steps-view {
-        //border: 1px blue solid;
-    }
+    &__steps-view {}
 
     &__step-icons {
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        max-width: 600px;
+        width: 105%;
+        transform: translateX(-2.5%);
     }
 
     &__step-icons-item {
         list-style-type: none;
         height: 40px;
         width: 40px;
-        background-color: $color-grey;
+        background-color: $color-purple-faded;
         color: $color-white;
         text-align: center;
         margin-bottom: 15px;
@@ -170,10 +168,10 @@
             position: absolute;
             left: 0%;
             top: 50%;
-            transform: translate(-80%, -50%);
+            transform: translate(-17vw, -50%);
             width: 20vw;
             max-width: 140px;
-            height: 1px;
+            height: 2px;
             background-color: inherit;
             z-index: -10;
         }
@@ -190,20 +188,6 @@
         &--active {
             background-color: $color-purple;
 
-            &::after {
-                content: "";
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-                width: 115%;
-                height: 115%;
-                background-color: $color-grey;
-                border-radius: inherit;
-                border: 3px solid $color-purple;
-                z-index: -5;
-            }
-
         }
 
     }
@@ -212,9 +196,11 @@
 
 .aid-instruction-image {
     width: 100%;
-    max-width: 650px;
+    max-width: 550px;
 
-    &__wrapper {}
+    &__wrapper {
+        height: 100%;
+    }
 
 }
 
@@ -225,25 +211,58 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .aid-instruction {
-        &__wrapper {}
+        &__wrapper {
+            grid-column: 1/2;
+            grid-row: 3/4;
+        }
 
-        &__text {}
+        &__text {
+            height: 30%;
+
+        }
 
         &__step-descriptions {}
 
-        &__steps-view {}
+        &__steps-view {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
 
-        &__step-icons {}
+        &__step-icons {
+            width: 500px;
+            transform: translateX(0%) translateY(-10%);
+        }
 
-        &__step-icons-item {}
+        &__step-icons-item {
+            list-style-type: none;
+            height: 40px;
+            width: 40px;
+            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 50%;
+            position: relative;
+
+            &::before {
+                transform: translate(-80px, -50%);
+                width: 80px;
+                height: 2px;
+                background-color: inherit;
+                z-index: -10;
+            }
+        }
     }
 
     .aid-description {
-        &__wrapper {}
+        &__wrapper {
+            transform: translateX(10vw);
+        }
     }
 
     .aid-instruction-image {
-        &__wrapper {}
+        &__wrapper {
+
+        }
 
     }
 }
@@ -253,7 +272,8 @@
     .aid-wrapper {
         transform: translateY(150px);
         grid-template-columns: 60% 40%;
-        max-height: 1250px;
+        grid-template-rows: 30% 70%;
+        max-height: 1350px;
 
         &__title {
             display: none;
@@ -265,7 +285,6 @@
 
         &__wrapper {
             grid-column: 2/3;
-
         }
 
         &__attribution {
@@ -276,7 +295,7 @@
     .aid-description {
         &__wrapper {
             grid-row: 1/2;
-            //transform: translateX(0);
+            transform: translateX(0);
         }
     }
 
@@ -284,72 +303,36 @@
         &__wrapper {
             grid-column: 1/3;
             grid-row: 2/3;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
 
-            &::before {
+            &::before{
                 display: none;
             }
         }
+        &__text{
 
-        &__step-descriptions-item {
-            max-width: 420px;
         }
-
-        &__text {
-            width: 40%;
-            //min-width: 35%;
-        }
-
-        &__steps-view {
-            width: 60%;
-            display: flex;
-            justify-content: space-between;
+    }
+    .aid-instruction-image {
+        &__wrapper {
             position: relative;
-
             &::before {
                 content: "";
+                height: 110%;
+                max-height: 900px;
+                width: 100%;
+                max-width: 700px;
                 position: absolute;
-                right: -3%;
-                top: 50%;
-                transform: translate(0%, -50%);
-                width: 97%;
-                max-width: none;
-                height: 102%;
-                background-color: pink;
+                left: 50%;
+                bottom: 0%;
+                transform: translate(-50%, 0%);
+                background-color: $color-white;
+                padding: 10px;
                 border-radius: 5px;
                 box-shadow: 6px 15px 30px -6px black;
                 z-index: -10;
             }
-
         }
-
-        &__step-icons {
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-around;
-            width: 80px;
-            margin: 30px 0px;
-        }
-
-        &__step-icons-item {
-            margin-bottom: 0px;
-
-            &::before {
-                content: "";
-                left: 50%;
-                bottom: 50%;
-                transform: translate(-50%, -50px) rotate(90deg);
-                max-width: 120px;
-
-            }
-        }
-    }
-
-    .aid-instruction-image {
-        //max-width: none;
-        margin: 30px 0px;
-
-        &__wrapper {}
 
     }
 }
@@ -363,23 +346,6 @@
             font-size: 0.6rem;
             left: 51%;
             bottom: 8%;
-        }
-    }
-
-    .aid-instruction {
-        &__step-icons {
-            align-items: flex-start;
-            transform: translateX(-5%);
-        }
-
-        &__steps-view {
-
-            &::before {
-                transform: translate(0%, -50%);
-                width: 100%;
-                max-width: none;
-            }
-
         }
     }
 
